--- a/Memory-game.css
+++ b/Memory-game.css
@@ -114,7 +114,7 @@ h2 {
     outline-color: white;
 }
 
-.restart-button {
+.Restart-button {
     padding: 10px 22px;
     margin-top: 13px;
     border-radius: 20px;
